# telos

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: telos-setup.md  telos.md
docs/: experiment.md  methodology.md
docs/superpowers/plans/: 2026-04-20-telos-mvp.md
docs/superpowers/specs/: 2026-04-20-telos-design.md
hooks/: hooks.json  session_start.py  stop.py  user_prompt_submit.py
lib/: decisions.py  journal.py  observations.py  profile.py  storage.py
skills/briefing-daily/: SKILL.md
skills/checking-in-weekly/: SKILL.md
skills/deciding-with-telos/: SKILL.md
skills/reflecting-on-day/: SKILL.md
skills/setting-polestar/: SKILL.md
skills/using-telos/: SKILL.md
tests/: conftest.py  test_decisions.py  test_hook_session_start.py  test_hook_stop.py  test_hook_user_prompt_submit.py  test_journal.py  test_observations.py  test_profile.py  test_storage.py
tests/scenarios/: decision_with_polestar.md  onboarding_first_run.md  weekly_checkin.md
